--- a/irisweb.html
+++ b/irisweb.html
@@ -8,17 +8,28 @@
 </head>
 <body>
 
-    <header class="container-fluid bg-light">
-        <nav class="d-flex justify-content-between align-items-center">
-            <a class="nav-button">Услуги</a>
-            <a class="nav-button">Наружная реклама</a>
-            <a class="nav-button">Оплата</a>
-            <div class="logo"><img src="src/logo/main-logo.svg" alt=""></div>
-            <a class="nav-button">О компании</a>
-            <a class="nav-button">Отзывы</a>
-            <a class="nav-button">Контакты</a>
+    <header class="bg-light">
+        <nav class="navbar navbar-expand-lg navbar-height">
+            <div class="container-fluid ">
+                <div class="navbar-brand"><img src="src/logo/main-logo.svg" alt=""></div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav d-flex justify-content-between">
+                        <li class="nav-item text-end"><a href="#" class="nav-link mx-lg-3 mx-xl-4 mx-xxl-5 text-dark">Услуги</a></li>
+                        <li class="nav-item text-end"><a href="#" class="nav-link mx-lg-3 mx-xl-4 mx-xxl-5 text-dark">Наружная реклама</a></li>
+                        <li class="nav-item text-end"><a href="#" class="nav-link mx-lg-3 mx-xl-4 mx-xxl-5 text-dark">Оплата</a></li>
+                        <li class="nav-item text-end"><a href="#" class="nav-link mx-lg-3 mx-xl-4 mx-xxl-5 text-dark">О компании</a></li>
+                        <li class="nav-item text-end"><a href="#" class="nav-link mx-lg-3 mx-xl-4 mx-xxl-5 text-dark">Отзывы</a></li>
+                        <li class="nav-item text-end"><a href="#" class="nav-link mx-lg-3 mx-xl-4 mx-xxl-5 text-dark">Контакты</a></li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
-    
+
+
+      <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
