--- a/irisweb.html
+++ b/irisweb.html
@@ -29,6 +29,15 @@
         </nav>
     </header>
 
+    <main>
+
+        <div class="container-fluid first-banner d-flex flex-column justify-content-center align-items-center text-secondary" style="width: 100%; height: 765px;">
+            <h1>Рекламное агентство</h1>
+            <p class="text-center">Партнер в творческих решениях для сувенирной продукции, широкоформатной печати, полиграфии и дизайна. Доверьте нам создание уникальных и запоминающихся идей для успешной рекламы!</p>
+            <button>Обратная связь</button>
+        </div>
+
+    </main>
 
       <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
