Добавил вторую часть, не настраивал стили еще. Нужно будет донастроить стили везде, кроме хедера.

--- a/irisweb.html
+++ b/irisweb.html
@@ -37,6 +37,48 @@
             <button>Обратная связь</button>
         </div>
 
+        <div class="container-fluid my-3">
+            <div class="row">
+              <div class="col-xl-4 col-lg-6 col-md-12 d-flex flex-column justify-content-center">
+                <img src="src/icons/gift-box-icon 1.svg" alt="">
+                <p>
+                    Мы делаем разные сувениры, используя разные способы печати. У нас есть уникальные вещи разных стилей и материалов. Мы помогаем воплотить ваши идеи в качественные сувениры.
+                </p>
+              </div>
+              <div class="col-xl-4 col-lg-6 col-md-12 d-flex flex-column justify-content-center">
+                <img src="src/icons/Graphics-design-icon 1.svg" alt="">
+                <p>
+                    Наша команда дизайнеров готова вам помочь в создании дизайна для полиграфии, широкоформатных проектов и логотипов. Мы охватываем широкий спектр дизайнерских услуг, чтобы поддержать вас в любом проекте, от печати до создания уникального брендового стиля.
+                </p>
+              </div>
+              <div class="col-xl-4 col-lg-6 col-md-12 d-flex flex-column justify-content-center">
+                <img src="src/icons/Plotter-icon 1.svg" alt="">
+                <p>
+                    Наши возможности в широкоформатной печати позволяют воплотить ваши идеи в крупных масштабах. Независимо от того, нужен ли вам баннер, постер или другие большие графические изображения, наша команда готова обеспечить вас высококачественной широкоформатной печатью.
+                </p>
+              </div>
+              <div class="col-xl-4 col-lg-6 col-md-12 d-flex flex-column justify-content-center">
+                <img src="src/icons/megaphone-icon 1.svg" alt="">
+                <p>
+                    Наша команда активно организует разнообразные промоакции, включая распространение листовок и проведение дегустаций. Мы стремимся максимально привлечь внимание вашей целевой аудитории через креативные и вкусные инициативы.
+                </p>
+              </div>
+              <div class="col-xl-4 col-lg-6 col-md-12 d-flex flex-column justify-content-center">
+                <img src="src/icons/Text-icon 1.svg" alt="">
+                <p>
+                    Наши полиграфические услуги включают в себя печать разнообразных материалов, от визиток и брошюр до постеров и каталогов. С использованием высококачественных технологий мы обеспечиваем четкость и яркость каждого отпечатка, придавая вашим материалам профессиональный и внушительный вид.
+                </p>
+              </div>
+              <div class="col-xl-4 col-lg-6 col-md-12 d-flex flex-column justify-content-center">
+                <img src="src/icons/baloons-icon 1.svg" alt="">
+                <p>
+                    Наши эвент-услуги предлагают полный спектр развлекательных возможностей для вашего мероприятия. От яркого аквагрима, живописных аниматоров до профессиональных ведущих – мы заботимся о создании неповторимой и атмосферной программы. Позвольте нам воплотить ваши идеи в яркое и увлекательное событие!
+                </p>
+              </div>
+            </div>
+          </div>
+
+
     </main>
 
       <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
