Сделал еще 1.5 секции. Осталось немного

--- a/irisweb.html
+++ b/irisweb.html
@@ -33,7 +33,7 @@
 
         <section class="container-fluid first-banner d-grid gap-2 text-center text-secondary">
             <div class="row justify-content-center align-content-end">
-              <h1 class="col-lg-6 col-md-12 fs-1">Рекламное агентство</h1>
+              <h2 class="col-lg-6 col-md-12 fs-1">Рекламное агентство</h2>
             </div>
             <div class="row justify-content-center align-content-center">
               <p class="col-lg-6 col-md-12 fs-4">Партнер в творческих решениях для сувенирной продукции, широкоформатной печати, полиграфии и дизайна. Доверьте нам создание уникальных и запоминающихся идей для успешной рекламы!</p>
@@ -44,7 +44,7 @@
         </section>
 
         <section class="container-fluid my-3">
-            <h1 class="m-5 text-center">Услуги</h1>
+            <h2 class="m-5 text-center fw-bold">Услуги</h2>
             <div class="row my-3 ">
               <div class="col-xl-4 col-lg-6 col-md-12 px-5 d-flex flex-column align-items-center">
                 <object class="our-service-cards" type="image/svg+xml" data="src/icons/gift-box-icon 1.svg"> </object>
@@ -88,6 +88,29 @@
             </div>
         </section>
 
+        <section class="container-fluid second-banner d-grid gap-2 text-center text-secondary">
+          <div class="row justify-content-center align-content-end">
+            <h2 class="col-lg-6 col-md-12 fs-1">Услуга Дизайнера</h2>
+          </div>
+          <div class="row justify-content-center align-content-center">
+            <p class="col-lg-6 col-md-12 fs-4">Наша команда - это коллектив талантливых дизайнеров и профессионалов, готовых воплотить в жизнь ваши самые смелые идеи. Мы искренне верим, что в каждом проекте есть место креативности, и стремимся сделать каждое сотрудничество с "Ирис | сияние праздника" неповторимым и вдохновляющим опытом. Позвольте нам сделать ваш бренд узнаваемым и вашу продукцию особенной!</p>
+          </div>
+          <div class="row justify-content-center align-content-start">
+            <button class="btn btn-outline-primary rounded-pill px-5 col-lg-3 col-md-6 col-sm-8 col-10" type="button" style="--bs-btn-bg: #f8f8f8;--bs-btn-hover-color: #5b0664; --bs-btn-hover-bg: #EEEEEE">Обратная связь</button>
+          </div>
+      </section>
+
+      <section class="container-fluid">
+        <h2 class="m-5 text-center fw-bold">Как мы работаем?</h2>
+
+        <div class="figure-space">
+          <div class="line"></div>
+          <div class="super-form fs-3 fw-semibold" id="top">1</div>
+          <div class="super-form fs-3 fw-semibold" id="middle">2</div>
+          <div class="super-form fs-3 fw-semibold" id="bottom">3</div>
+        </div>
+
+      </section>
 
     </main>
 
