Добавлены секции. Доделать footer

--- a/irisweb.html
+++ b/irisweb.html
@@ -31,7 +31,7 @@
 
     <main>
 
-        <section class="container-fluid first-banner d-grid gap-2 text-center text-secondary">
+        <section class="container-fluid p-5 first-banner d-grid gap-2 text-center text-secondary">
             <div class="row justify-content-center align-content-end">
               <h2 class="col-lg-6 col-md-12 fs-1">Рекламное агентство</h2>
             </div>
@@ -43,8 +43,8 @@
             </div>
         </section>
 
-        <section class="container-fluid my-3">
-            <h2 class="m-5 text-center fw-bold">Услуги</h2>
+        <section class="container-fluid p-5 mb-5">
+            <h2 class="pb-5 text-center fw-bold">Услуги</h2>
             <div class="row my-3 ">
               <div class="col-xl-4 col-lg-6 col-md-12 px-5 d-flex flex-column align-items-center">
                 <object class="our-service-cards" type="image/svg+xml" data="src/icons/gift-box-icon 1.svg"> </object>
@@ -88,7 +88,7 @@
             </div>
         </section>
 
-        <section class="container-fluid second-banner d-grid gap-2 text-center text-secondary">
+        <section class="container-fluid p-5 second-banner d-grid gap-2 text-center text-secondary">
           <div class="row justify-content-center align-content-end">
             <h2 class="col-lg-6 col-md-12 fs-1">Услуга Дизайнера</h2>
           </div>
@@ -100,8 +100,8 @@
           </div>
       </section>
 
-      <section class="container-fluid">
-        <h2 class="m-5 text-center fw-bold">Как мы работаем?</h2>
+      <section class="container-fluid p-5">
+        <h2 class="pb-5 text-center fw-bold">Как мы работаем?</h2>
 
         <div class="figure-space">
           <div class="line"></div>
@@ -111,6 +111,100 @@
         </div>
 
       </section>
+
+      <section class="container-fluid p-5 bg-primary">
+        <h2 class="pb-5 text-center fw-bold text-light">Отзывы наших клиентов</h2>
+
+        <div id="carouselExample" class="carousel slide">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="https://place-hold.it/400x200" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="https://place-hold.it/400x200/666/fff" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="https://place-hold.it/400x200/222/fff" class="d-block w-100" alt="...">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+
+        <p class="fs-3 text-light text-center pt-5 m-0">
+          Если вы обращались к нам, пишите на <a class="link-light" href="mailto:iris33siyai@vk.com">iris33siyai@vk.com</a>. Мы бы очень хотели узнать ваше мнение о нашей работе!
+        </p>
+
+      </section>
+
+      <section class="container-fluid p-5">
+        <h2 class="pb-5 text-center fw-bold">Почему нас выбирают?</h2>
+
+        <div class="container">
+          <div class="row py-5">
+            <div class="col-lg-2 col-md-2 d-flex justify-content-end">
+              <object class="why-us-svg" type="image/svg+xml" data="src/icons/proffesional-icon-1.svg"> </object>
+            </div>
+            <div class="col-lg-8 col-md-10">
+              <h5>Профессионализм в Деталях</h5>
+              <p>Внимание к деталям – наш девиз. Мы стремимся к совершенству в каждой линии, цвете и слове. Наши профессионалы заботятся о каждой мелочи, чтобы ваша реклама была не просто эффективной, но и визуально восхитительной.</p>
+            </div>
+          </div>
+          <div class="row py-5">
+            <div class="col-lg-2 col-md-2 d-flex justify-content-end">
+              <object class="why-us-svg" type="image/svg+xml" data="src/icons/Quality-icon-1.svg"> </object>
+            </div>
+            <div class="col-lg-8 col-md-10">
+              <h5>Быстрый Результат, Без Ущерба Качеству</h5>
+              <p>Ваш запрос срочен – наш ответ мгновенен. Благодаря четкой организации и профессионализму, мы предлагаем экспресс-решения без компромиссов. Ваш заказ будет вовремя сделан и качественно</p>
+            </div>
+          </div>
+          <div class="row py-5">
+            <div class="col-lg-2 col-md-2 d-flex justify-content-end">
+              <object class="why-us-svg" type="image/svg+xml" data="src/icons/Responsible-icon-1.svg"> </object>
+            </div>
+            <div class="col-lg-8 col-md-10">
+              <h5>Ответственный Подход</h5>
+              <p>Мы принимаем ответственность за каждый этап работы – от концепции до реализации. Ваш успех – это наша задача, и мы готовы вложить все силы, чтобы достичь ваших целей.</p>
+            </div>
+          </div>
+        </div>
+
+      </section>
+
+      <section class="container-fluid p-5 second-banner d-grid gap-2 text-center text-secondary">
+        <div class="row justify-content-center align-content-center">
+          <h2 class="col-lg-6 col-md-12">Ваше счастье - наша миссия! Мы создаем праздники, переливающиеся всеми 
+            цветами радости!</h2>
+        </div>
+    </section>
+
+    <section class="container-fluid p-5">
+      <h2 class="pb-5 text-center fw-bold">Наша команда</h2>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 col-md-6 col-sm-12 d-flex flex-column align-items-center text-center">
+            <img class="our-team-photo mb-3" src="src/photo/Ellipse-4.png" alt="Kartasheva Marina">
+            <h5 class="fw-bold mb-3">Карташева Марина</h5>
+            <p class="fs-6 fst-italic mb-3">Руководитель</p>
+            <p class="px-3 mb-5">Часто меня спрашивают об опыте работы и возрасте. Мне 22 года, и уже 4-й год я работаю в рекламной сфере, пройдя через несколько агентств нашего города. По образованию я дизайнер и художественный оформитель. Интересно, что помимо компьютерной работы, я также активно участвую в цеховой деятельности.
+              Когда люди описывают меня, первое, что они упоминают, - это моя доброта и веселость. В нашей компании главная миссия - вызывать у вас улыбку, предоставляя качественные услуги. Заходите в наш офис в г. Владимир, будем рады угостить чаем с печеньками и поделиться идеями!</p>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-12 d-flex flex-column align-items-center text-center">
+            <img class="our-team-photo mb-3" src="src/photo/Ellipse-5.png" alt="Rusakova Anna">
+            <h5 class="fw-bold mb-3">Русакова Анна</h5>
+            <p class="fs-6 fst-italic mb-3">Коммерческий директор</p>
+            <p class="px-3 mb-5">Мой жизненный девиз – это позитив. В нашем агентстве не проходит ни дня без моих шуток. Мне 36 лет, и у меня образование в области техники и дизайна. Мой опыт работы в сфере дизайна интерьера составляет 5 лет, а в рекламном агентстве – более 2 лет. Моя специализация – полиграфия и сувенирная продукция. Люблю работать как в программах, так и руками, создавая разнообразные сувениры для вас. Так как я мама, я, как никто другой, понимаю, как развлечь детей. Поэтому мы поможем вам с организацией Эвента. Иногда лично принимаю участие на праздниках в качестве аквагримёра.</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
     </main>
 
