--- a/irisweb.html
+++ b/irisweb.html
@@ -208,6 +208,27 @@
 
     </main>
 
+    <footer class="container-fluid pt-3" style="--bs-bg-opacity: .7">
+      <div class="social-medias row justify-content-center align-items-center text-lg-center text-end">
+        <div class="social-media col-md-1 col-sm-12 mb-3">
+          <img src="src/logo/vk-iris-colors.svg" alt="">
+        </div>
+        <div class="social-media col-md-1 col-sm-12 mb-3">
+          <img src="src/logo/WhatsApp-iris-colors.svg" alt="">
+        </div>
+        <div class="social-media col-md-1 col-sm-12 mb-3">
+          <img src="src/logo/TG-Iris-colors.svg" alt="">
+        </div>
+        <div class="social-media col-md-1 col-sm-12 mb-3">
+          <img src="src/logo/YouTube-iris-colors.svg" alt="">
+        </div>
+        <div class="social-media col-md-1 col-sm-12 mb-3">
+          <img src="src/logo/TikTok-iris-colors.svg" alt="">
+        </div>
+      </div>
+      <div class="row"><p class="col-12 text-center text-light">Все права защищены © ИП Карташева Марина Сергеевна</p></div>
+    </footer>
+
       <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
